--- a/RASD/main.tex
+++ b/RASD/main.tex
@@ -248,10 +248,10 @@
         \post{The third party is successfully authenticated as \textit{Third-Party User}.}
         \end{usecase}
         
-        \subsubsection{Request Management}
+        \subsubsection{Data4Help Request Management}
         The application may provide an interface that allows \textit{Third-Parties} to send requests to view the data of a specific \textit{individual} or a group of \textit{individuals}. A single individual may accept or refuse this request.
         
-        \begin{usecase}{Third Party Individual Data Request}
+        \begin{usecase}{Individual Data Request}
         \name{Third Party Individual Data Request}
         \brief{A third party sends a request to an individual to view his data.}
         \actor{Third Party, Individual, TrackMe.}
@@ -271,28 +271,61 @@
         \brief{A third party views data of a group of individuals.}
         \actor{Third Party, Individual, TrackMe.}
         \pre{The third-party is logged-in and it's on the main page.}
-        \bflow{The third party presses the \textit{'Data-Request'} button.}
+        \bflow{The third party presses the \textit{'Data-Request'} button. Third party is now on the Data-Request            page.}
               {TrackMe asks if user wants to request data to a specific individual or to get anonymous data of a group of individuals.}
-              {The third party presses the button \textit{'Batch'} }
+              {The third party presses the button \textit{'Group'}. Third party is now on the Group subsection of Data-Request page.}
               {TrackMe provides a set of boxed called \textit{'Minimum Age'}, \textit{'Maximum Age'}, \textit{'Included Countries'}, \textit{'Excluded Countries'}.}
               {.....}
+              {Third party presses the button called \textit('Confirm').}
               {TrackMe checks if the magnitude of the group defined on point \textit{e)} is greater than 1000.}
               {TrackMe informs the Third-Party user that the operation succeded.}
         \post{The third party has access to the anonymized data of a specific group of individuals.}
         \end{usecase}
         
+        \begin{usecase}{Third Party Subscribes to New Data}
+        \name{Third Party Subscribes to New Data}
+        \brief{A third party subscribes to the data of a certain group of individuals.}
+        \actor{Third Party, Individual, TrackMe.}
+        \pre{The third-party is logged-in and is on the Group subsection of Data-Request page.}
+        \bflow{TrackMe provides a set of boxed called \textit{'Minimum Age'}, \textit{'Maximum Age'}, \textit{'Included       Countries'}, \textit{'Excluded Countries'}.}
+              {.....}
+              {Third party presses the button called \textit('Subscribe'). Then, it presses the button called \textit('Confirm').}
+              {TrackMe checks if the magnitude of the group defined on point \textit{e)} is greater than 1000.}
+              {TrackMe informs the Third-Party user that the operation succeded.}
+        \post{The third party is subscribed to the group data and will receive new data as soon as they are produced.}
+        \end{usecase}
         
+        \begin{usecase}{Individual Accepts Data Request}
+        \name{Individual Accepts Data Request}
+        \brief{An individual accepts the request to view his personal data.}
+        \actor{Third Party, Individual, TrackMe.}
+        \pre{The individual is logged-in and it's on the main page.}
+        \bflow{TrackMe sends to the IU a request to view his data. The IU can see that the request was sent by a              specific TPU. TrackMe provides two buttons called \textit{Accept} and \textit{Refuse}.}
+              {The IU presses the accept button.}
+              {TrackMe sends to the TPU a confirmation about his request for that Individual.}
+              {TrackMe informs the IU that the operation succeded.}
+        \post{The third party has access to the Individual data.}
+        \end{usecase}
         
         \subsubsection{Connection of External Devices}
         The application may provide an interface that allows \textit{individual} to connect an external device such as smart-watch via Bluetooth or NFC.
         
         Moreover, in case such interface is present, \textit{TrackMe} should be able to interact also with the external device and to acquire data from it.
         
-        \subsubsection{Data4Help Request}
-        
-        \subsubsection{Data4Help Request Management}
         
         \subsubsection{Automated-SOS Request}
+        
+        \begin{usecase}{Individual Subscribes to Automated-SOS}
+        \name{Individual Subscribes to Automated-SOS}
+        \brief{An individual wants to enable Automated-SOS, a service that guarantees that an ambulance will be called        in 5 seconds if the individual's health parameters are below certain thresholds.}
+        \actor{Individual, Automated-SOS.}
+        \pre{The individual is logged-in, it's on the main page and he's not subscribed to Automated-SOS.}
+        \bflow{The individual presses the \textit{'Automated-SOS'} button.}
+              {Automated-SOS checks if the individual is already subscribed.}
+              {Automated-SOS asks the user if he wants to subscribe to the service. It provides two buttons called \textit{'Subscribe'} and \textit{'Back'}.}
+              {The individual presses the \textit{'Subscribe'} button.}
+        \post{Individual is subscribed to Automated-SOS.}
+        \end{usecase}
         
         \subsubsection{Automated-SOS Data Management}
         
