--- a/RASD/main.tex
+++ b/RASD/main.tex
@@ -44,27 +44,45 @@
     \subsection{Purpose}
     This Requirement Analysis and Specification Document addresses the description in terms of functional and non-functional requirements of \textit{TrackMe}, a new health monitoring application.
     
-    This document is aimed at giving an explanation both of the problem and of the proposed software-based solution by pointing out different features of the application. Moreover, this specifications also addresses some relevant QoS characteristics that the system should guarantee.
+    This specification is aimed at giving an explanation both of the problem and of the proposed software-based solution by pointing out different features of the application; in addition, is intended to model and describe the system itself, its requirements, its constraints, its components and how it interacts with the world and the users. Moreover, this specifications also addresses some relevant QoS characteristics that the system should guarantee.
     
-    Thus, the analysis is primarily focused on requirements elicitation and use cases description through well known standards for specification documents:
-        \begin{itemize}
-            \item[\textit{1)}] \textit{UML} for Use Case, Sequence and Activity Diagrams \cite{rumbaugh2004unified};
-            \item[\textit{2)}] \textit{Alloy} for formal analysis \cite{jackson2006software}.
-        \end{itemize}
+    The analysis is focused on requirements elicitation and use cases description through well known standards for specification documents such as \textit{UML} for Use Case, Sequence and Activity Diagrams \cite{rumbaugh2004unified} and \textit{Alloy} for formal analysis \cite{jackson2006software}.
         
-    This document is mostly directed and likely necessary to software designers and developers interested in the deployment of the proposed system.
+    This document is directed and highly recommended to software designers and developers interested in the deployment of the proposed system.
     
     \subsection{Scope and Audience}
         \subsubsection{Description of the given problem}
+        \textit{TrackMe} is a company that wants to develop an ease of use health monitoring application which offers different services for both young and old people who needs to keep track of their personal data in order to to keep their health safe.
         
-        \subsubsection{Description of the proposed system}
-        \textit{TrackMe} is an ease of use health monitoring application which offers different services for both young and old people who needs to keep track of their personal data in order to to keep their health safe.
+        The system should provide an efficient data acquisition facility which gives the possibility to verified \textit{third-party} signed onto the service to request health status information about subscribed customers. The application may also allow \textit{individual} users to connect \textit{external devices} such as smart-watches or similar, to perform a more detailed data acquisition and monitoring.
         
-        This proposed system provides a very efficient data acquisition service named \textit{Data4Help}. This facility gives the possibility to verified \textit{third-party} registered onto the service to request health status information about subscribed customers. The application may also allow \textit{individual} users to connect \textit{external devices} such as smart-watches or similar, to perform a more detailed data acquisition and monitoring.
-        
-        In addition, the application provides also a fully automated SOS service for elderly people: \textit{Automated-SOS} uses \textit{Data4Help} features to monitor the health status and, when such parameters are below certain thresholds, sends the location of the customer to an ambulance.
+        In addition, the \textit{third-party} may also provide an SOS service for elderly people for which \textit{TrackMe} should be able to monitor the health status and, when such parameters are below certain thresholds, sends the location of the customer to an ambulance.
     
-        Moreover, through the \textit{Track4Run} service, \textit{TrackMe} allows customers to create a new run, a competition in which other users can either participate as \textit{athletes} or watch as \textit{spectators}. Additionally, this service may exploits other service functionality for keeping track of athletes progresses and for helping them to prevent major accident happen during the run. 
+        Moreover, through the \textit{Track4Run} service, \textit{TrackMe} wants to provide to third-parties signed in the application to create a new run, a competition in which other users can either participate as \textit{athletes} or watch as \textit{spectators}. Additionally, this feature may exploits other service functionality for keeping track of athletes progresses and for helping them to prevent major accident happen during the run.
+                
+        \subsubsection{Description of the proposed system}
+        The proposed solution consists of a back-end server application that manages users' registration, login and data and allows to keep everything synchronized between the two front-end applications:
+        \begin{itemize}
+            \item a web-based application to supply to the end user an ease of use interface web interface for \textit{TrackMe};
+            \item a mobile application that allows the user to easily access the service from the smartphone.
+        \end{itemize}
+        
+        The application will provide both \textit{"Sign-on"} and \textit{"Sign-in"} pages and will be able to register new users and to check credentials used to login.
+        
+        To register himself an user must provide an username and a password as well as his/her personal information. To be logged in, the user should send through the login form his credentials which the system will use to authenticate him/her.
+        
+        \textit{TrackMe} may further yield an interface that allows individual users to connect external devices and a method for acquiring data from it.
+        
+        The application should also provide to third-parties two possible data request options:
+        \begin{itemize}
+            \item individual data request:
+            \item group data request:
+        \end{itemize}
+        
+        Moreover, the system implements \textit{Data4Help} services to manage individual's personal data and provide them to third-parties who requested for. In addition, there should be an interface for third-party users registered to \textit{Data4Help} that wants to enable an \textit{Automated-SOS} service for her subscribed users.
+        
+        Additionally, the software should provide to users that wants to use \textit{Track4Run} all the facilities they needed, such as a page for the creation of a new run with all the information (track, date and time) and two different pages to allow both spectators and athletes to watch or enroll to existing run.
+        
         \subsubsection{Goals}
         
         \begin{description}
@@ -72,15 +90,13 @@
         \end{description}
     
     \subsection{Document Overview}
-        This part of the document is intended to provide both an overview of the problem and an idea of the proposed solution.
+        This initial part of the document is intended to provide both an overview of the problem and an idea of the proposed solution.
         
-        Next section is aimed at giving a more detailed description of the proposed system, by meaning of the application point of view. Additionally, addresses users characteristic, dependencies and constraint.
+        Following section is aimed at giving a more detailed description of the proposed system, by meaning of the application point of view. Additionally, it addresses user characteristics, dependencies and constraints.
         
         Third chapter shows a detailed analysis of \textit{TrackMe} in terms both functional and non-functional requirements of the system. Furthermore, takes into account definition of all use cases, their description through UML diagrams and their mapping on requirements.
         
-        Fourth section illustrates \textit{Alloy} models including purpose, proof and explanation. In addition, describes worlds obtained by running them.
-        
-        Last part is about effort spent in writing this document in terms of hours of work.
+        Finally, endmost section illustrates \textit{Alloy} models including purpose, proof and explanation. In addition, describes worlds obtained by running them.
         
         There is also a list of tables and a list of figures representing respectively use cases and diagrams in order to help the reader to understand them and navigate the specification.
         
@@ -92,9 +108,10 @@
                 \begin{description}
                     \item[\textbf{User}] a general definition of a customer registered into the application
                     
-                    \item[\textbf{Individual}] a single person \textit{TrackMe User}, identified either by SSN or by FC number
+                    \item[\textbf{Individual}] a single person \textit{User}, identified either by SSN or by FC number
+                    \item[\textbf{Third-Party}] an organization \textit{User}, identified by VAT number
                     
-                    \item[\textbf{Third-Party}] a company \textit{TrackMe User}, identified by VAT number
+                    \item[\textbf{Subscribed User}] an individual for which one or more third party have done a request accepted by the individual itself
                     
                     \item[\textbf{External Device}] an external device such as a smart-watch or similar devices
                     
@@ -119,7 +136,10 @@
                 
             \subsubsection{Abbreviations}
             \begin{itemize}
-                \item[-] Abbreviation 
+                \item An: Assumption number n
+                \item Cn: Constraint number n
+                \item Dn: Dependency number n
+                \item Gn: Goal number n
             \end{itemize}
             
             \subsubsection{Acronyms}
